--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,8 +9,9 @@ html{
     @apply bg-primary;
 }
 body{
-    font-family: 'Figtree', sans-serif;
+    font-family: 'Lato', sans-serif;
     padding-top: 84px;
+    @apply text-body font-bold;
 }
 
 .main{
@@ -186,7 +188,7 @@ p.small{
     @apply w-full h-52 bg-cover bg-center bg-no-repeat mb-4;
 }
 .post-thumb{
-    @apply w-20 h-20 rounded-sm overflow-hidden bg-gray-300;
+    @apply w-20 h-20 rounded-sm overflow-hidden bg-gray-300 bg-cover bg-center bg-no-repeat;
 }
 .post-card h2{
     transition: all 0.2s ease-in-out;
